2007-07-09  Matthew Barnes  <mbarnes@redhat.com>

	* es-event.h: Declare es_event_target_new_shell().

2007-07-06  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #446894

	* e-shell-window-commands.c (command_page_setup):
	Callback for new FilePageSetup verb.

2007-07-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Added a hook event after the shell is started.

	* e-shell.c: (e_shell_create_window):
	* es-event.c: (es_event_target_new_shell):
	* es-event.h:

2007-06-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #448201 from Gabor Kelemen

	* main.c: (main): Add translation domain

2007-06-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #325882

	* import.glade:
	* e-active-connection-dialog.glade:
	* importer/import.glade:
	Changed GTK_WIN_POS_NONE to GTK_WIN_POS_CENTER_ON_PARENT.

2007-06-17  Tobias Mueller <tobiasmue@svn.gnome.org>

	* evolution-test-component.c:
	removed createControls stuff. Fixes #444289

2007-06-15  Matthew Barnes  <mbarnes@redhat.com>

	* e-shell-folder-title-bar.c:
	Use ellipsized GtkLabels instead of EClippedLabels (#447727).

2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #386503 from Matthew Barnes
	
	* e-shell-window.c: (e_shell_window_new):
	* main.c: (main):

2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>

        ** Fix for version removal from Installed files from Gilles Dartiguelongue 
	
	* Makefile.am:

2007-06-02  Gilles Dartiguelongue  <dartigug@esiee.fr>

	* Fix bug #441055

	* e-component-registry.c: (query_components):
	* e-shell-nm-glib.c: (e_shell_nm_glib_initialise),
	(e_shell_nm_glib_dispose):
	* e-shell-settings-dialog.c: (load_pages):
	various compilation warning cleanup

2007-05-28  Jules Colding  <colding@omesc.com>

	* main.c (main): Prevent dup2() and close() on -1

2007-05-13  Matthew Barnes  <mbarnes@redhat.com>

	* e-shell.c (impl_Shell_handleURI):
	Revert the change from 2007-05-11.  (#407104)

2007-05-12  Matthew Barnes  <mbarnes@redhat.com>
